--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,13 @@
 --- #YAML:1.0
 name:               Net-SNMP-XS
-version:            0.03
+version:            1.0
 abstract:           ~
 author:  []
 license:            unknown
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Guard:      1
@@ -14,7 +16,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
